fix: fix z-index again

--- a/src/components/Dashboard/dashboard.module.css
+++ b/src/components/Dashboard/dashboard.module.css
@@ -8,7 +8,7 @@
   margin-bottom: 16px;
   min-width: 320px;
   border-radius: 0 0 8px 8px;
-  z-index: 999;
+  z-index: 9999;
 }
 
 .top-menu div {
