--- a/src/components/Group/group.module.css
+++ b/src/components/Group/group.module.css
@@ -26,7 +26,7 @@
   border-radius: 0 0 8px 8px;
   position: sticky;
   top: 68px;
-  z-index: 999;
+  z-index: 9999;
 }
 
 .tabs {
