--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -12,7 +12,7 @@
   position: sticky;
   top: 0;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
-  z-index: 9999;
+  z-index: 9998;
 }
 
 .header nav {
